--- a/src-frontend/app/package.json
+++ b/src-frontend/app/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:8000",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite --host 0.0.0.0 build",
     "preview": "vite --host 0.0.0.0 preview"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "i": "^0.3.7",
