--- a/src-backend/requirements.txt
+++ b/src-backend/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
 dj-database-url==1.3.0
 Django==4.1.7
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+idna==3.4
 Pillow==9.5.0
 psycopg2-binary==2.9.6
 python-decouple==3.8
 pytz==2023.3
+requests==2.30.0
 sqlparse==0.4.3
+stripe==5.4.0
 typing_extensions==4.5.0
+urllib3==2.0.2
